--- a/descricaoBaby/style-baby.css
+++ b/descricaoBaby/style-baby.css
@@ -183,6 +183,7 @@ button{
     font-weight: 400;
     margin-top: 7vh;
     margin-left: 5vh;
+    margin-right: 2vh;
 }
 
 .elementosDoTexto-Descricao {
