--- a/descricaoFeminina/style-feminino.css
+++ b/descricaoFeminina/style-feminino.css
@@ -74,6 +74,25 @@ a {
 
 /* COMEÇO DE DESCRIÇÃO */
 
+/* BOTÃO SHOPEE */
+.btn-shopee {
+    justify-content: center;
+    align-items: center;
+    padding: 10px 20px;
+    cursor: pointer;
+    color: white;
+   
+}
+
+.btn-shopee img {
+    margin-left: 8px; /* Espaço entre o texto e a imagem */
+    height: 20px; /* Ajuste o tamanho da imagem */
+}
+
+
+
+
+
 #imagemMeia {
     margin-top: 20vh;
     border: 1px solid #A5A5A5;
