--- a/revendedor.css
+++ b/revendedor.css
@@ -133,4 +133,74 @@ a {
     background-color: #087B8B;
 }
 
+/*VANTAGENS */
+.vantagens-h1{
+    text-align: center;
+    font-family: 'LibreFranklin';
+    margin: 100px;
+    font-size: 35px;
+}
 
+/* Estilos para a caixa de informação */
+.info-box {
+    display: none; /* Ocultar inicialmente */
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #fff;
+    border: 2px solid #ddd;
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.3);
+    z-index: 100; /* Garantir que fique acima de outros elementos */
+    width: 400px;
+    text-align: center;
+}
+
+/* Estilo adicional para o fundo quando a caixa de texto estiver ativa */
+.info-box.active {
+    display: block;
+}
+
+/* Ajuste das imagens específicas de mais-vantagens */
+.mais-vantagens-icon {
+    
+    cursor: pointer; /* Mostrar que é clicável */
+    position: absolute;
+    top: 10px; 
+    right: 10px;
+    width: 20px; 
+    height: auto; 
+}
+
+/* Estilos adicionais para as seções de vantagens */
+.vantagens {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    margin: 50px 0;
+}
+
+/* Estilo para cada card de vantagem */
+.maior-rentabilidade,
+.variedade,
+.menor-custo {
+    border: 1px solid #000000;
+    padding: 20px;
+    width: 15%;
+    height: 150px;
+    text-align: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+    transition: transform 0.3s, box-shadow 0.3s;
+    position: relative;
+}
+
+/* Efeito ao passar o mouse sobre os cards */
+.maior-rentabilidade:hover,
+.variedade:hover,
+.menor-custo:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
