--- a/esportvaMasc.css
+++ b/esportvaMasc.css
@@ -263,9 +263,7 @@ a {
 .cinzaKit02,
 .cinzaCurto,
 .cinzaCurtoKit,
-.cinzaPolo,
-.azulPro,
-.verdePro {
+.cinzaPolo {
     background-color: #96A6B5;
 }
 
